[package]
name = "socket-geoip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
ctrlc = "3.4.7"
listenfd = "1.0.2"
maxminddb = { version = "0.26.0", features = ["mmap"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["preserve_order"] }
tokio = { version = "1.47.1", features = ["macros", "net", "time"] }
tokio-fastcgi = "1.2.0"
tokio-util = "0.7.16"
